@@ -1,4 +1,4 @@
-# Note: this file was auto-generated by Module::Build::Compat version 0.4205
+# Note: this file was auto-generated by Module::Build::Compat version 0.4218
 require 5.008002;
 use ExtUtils::MakeMaker;
 WriteMakefile
